# candle

candle-core/: Cargo.toml
candle-core/src/: metal_backend.rs  tensor.rs.rej
candle-core/tests/: tensor_tests.rs.rej
candle-metal-kernels/: Cargo.toml  build.rs
candle-metal-kernels/src/: lib.rs  mul.metal  tests.rs
