[package]
name = "candle-metal-kernels"
version = "0.0.1"
edition = "2021"

description = "Metal kernels for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
metal = "0.26.0"

[build-dependencies]
glob = "0.3.1"
rayon = "1.7.0"
